# py-unit-automation

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/py_unit_automation/: main.py
tests/: test_main.py
