[project]
name = "py-unit-automation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "devsarvesh92", email = "sarveshdev92@gmail.com"},
]
dependencies = [
    "py-unit-automation @ file:///Users/sarvesh/Personal/prep/py-unit-automation",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
